--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,6 @@
             <version>1.3.2</version>
         </dependency>
         <dependency>
-            <groupId>net.sourceforge.owlapi</groupId>
-            <artifactId>owlapi-apibinding</artifactId>
-            <version>5.1.4</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
@@ -139,7 +134,7 @@
         <dependency>
             <groupId>net.sourceforge.owlapi</groupId>
             <artifactId>owlapi-api</artifactId>
-            <version>3.4</version>
+            <version>5.1.5</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -150,17 +145,17 @@
         <dependency>
             <groupId>net.sourceforge.owlapi</groupId>
             <artifactId>owlapi-apibinding</artifactId>
-            <version>3.4</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.ansell.pellet</groupId>
-            <artifactId>pellet-jena</artifactId>
-            <version>2.3.6-ansell</version>
+            <version>5.1.4</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.owlapi</groupId>
             <artifactId>owlapi-distribution</artifactId>
-            <version>5.1.0</version>
+            <version>5.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.owlapi</groupId>
+            <artifactId>owlapi-api</artifactId>
+            <version>5.1.8</version>
         </dependency>
     </dependencies>
 
